--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ hr {
     <p>Cursa Health</p>
   </div>
   <div class="middle">
-    <h1>Site Down for maintenance </h1>
+    <h1>Site is Down for maintenance </h1>
     <hr>
     <p>thank you for your patience</p>
   </div>
